--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.sykfactory.dismiss_keyguard.dismiss_keyguard">
+  package="com.sykfactory.dismiss_keyguard">
 </manifest>
